# da-rag-project-2026-mg-gozzi

da-rag-project-2026-starter-pack-main/: STATUS.md  pyproject.toml  pyrightconfig.json  run_server.py  test_embedding.py  test_endpoints.py
da-rag-project-2026-starter-pack-main/integration_tests/: test_01_external_requests.py  test_05_model_access_external.py  test_06_test_data_external.py  test_10_embeddings_external.py  test_15_vector_store_external.py  test_20_retrieval_external.py  test_30_rag_external.py
da-rag-project-2026-starter-pack-main/notebooks/: 01_ingest_and_embeddings.ipynb  02_query_and_retrieval.ipynb
da-rag-project-2026-starter-pack-main/src/: app.py  embeddings.py  ingest.py  rag.py  retrieval.py  test_data.py  vector_store.py
da-rag-project-2026-starter-pack-main/src/mini_wikipedia_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
da-rag-project-2026-starter-pack-main/tests/: test_00_internal_app.py  test_05_model_access_internal.py  test_06_test_data_internal.py  test_10_embeddings_internal.py  test_15_vector_store_internal.py  test_20_retrieval_internal.py  test_30_rag_internal.py
