[project]
name = "mini-wikipedia-rag"
version = "0.1.0"
description = "Example RAG environment using a few wikipedia articles with Llama Index"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "datasets>=2.14.0",
    "fastapi>=0.121.3",
    "jupyterlab>=4.5.6",
    "llama-index-embeddings-azure-openai>=0.4.1",
    "llama-index-llms-azure-openai>=0.4.2",
    "pyarrow>=15.0.0",
    "uvicorn>=0.23.2",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ailab"]
py-modules = ["app", "ingest", "llamaindex_models", "embeddings", "test_data", "retrieval", "vector_store", "rag"]




[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "integration_tests"]
# Filter out known warnings from dependencies
filterwarnings = [
    "ignore::DeprecationWarning:llama_index.*",
    "ignore:There is no current event loop:DeprecationWarning"
]
